# apertium-tzh

./: .gitignore  Makefile  Makefile.am  README.md  apertium-tzh.pc.in  apertium-tzh.tzh.lexc  apertium-tzh.tzh.rlx  apertium-tzh.tzh.spellrelax  apertium-tzh.tzh.twol  configure.ac  modes.xml
corpora/: grammar.tsv
dev/: countstems.sh
test/: analysis-input.txt  analysis-morph-expected.txt  analysis-unknown-expected.txt  tests.json
texts/: .grammar.tsv.swp  grammar.tsv
